1999-09-06  bertrand  <Bertrand.Guiheneuf@aful.org>
	
	* camel/md5-utils.h:
	* camel/md5-utils.c:
	changed names to follow camel style.
	(md5_get_digest_from_stream): 
	new methods.

	* camel/md5-utils.c: imported md5 coding 
	routine from rpm. Compiles.
	

1999-09-05  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/camel-folder.c (camel_folder_has_uid_capability): 
	(camel_folder_get_message_uid): 
	(camel_folder_get_message_uid_by_number): 
	(camel_folder_get_message_by_uid): 
	(camel_folder_get_uid_list): 
	Basic UID framework.
	
	* devel-docs/misc/ref_and_id_proposition.txt:
	New revision. Some fixes.

	* camel/camel-folder.h (struct _CamelFolder): added 
	uid_capability field.
	

	* camel/camel-folder.c (camel_folder_close): publicized
	the close method.

	* tests/ui-tests/store_listing.c (show_folder_messages): 
	use folder summary instead of opening all messages.
	(show_folder_messages): re-enabled old CPU/Mem consumming
	method. Useful for pop3 for instance.

	* camel/providers/MH/camel-mh-folder.c (_create_summary): 
	basic and highly non-efficient summary implementation.
	Should be seen as a proof of concept only.
	subfolder summary still has to be implemented.
	
	* camel/providers/maildir/camel-maildir-folder.c (_init_with_store): 
	hasn't summary for the moment. 
	* camel/providers/maildir/camel-maildir-folder.c
	cosmetic changes.
	

1999-09-04  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/MH/camel-mh-folder.c (_create_summary):
	started summary implementation.
	(_open): correct use of open.

	* camel/camel-folder.c (camel_folder_get_summary): 
	get folder associated summary object.

	* camel/Makefile.am:
	added summary files build

	* camel/camel-folder-summary.[ch]: 
	basic summary framework

1999-09-03  bertrand  <Bertrand.Guiheneuf@aful.org>

	* devel-docs/camel/Makefile.am:
	sgml doc has camel-recipient now.

	* camel/camel-recipient.c (camel_recipient_foreach_recipient_type): 
	added in-line documentation.
