@@ -41,5 +41,9 @@ typedef struct {
 void md5_get_digest (const gchar *buffer, gint buffer_size, guchar digest[16]);
 void md5_get_digest_from_stream (CamelStream *stream, gint buffer_size, guchar digest[16]);
 
+/* use this onr when speed is needed */
+/* for use in provider code only */
+void md5_get_digest_from_file (gchar *filename, gint buffer_size, guchar digest[16]);
+
 
 #endif	/* MD5_UTILS_H */
